# AndroidDemo-github

./: README.md  build.gradle  gradle.properties  import-summary.txt  local.properties  settings.gradle
VideoPlayModule/: build.gradle
VideoPlayModule-Lite/: build.gradle
app/: build.gradle  proguard.cfg  project.properties
app/src/main/: AndroidManifest.xml
app/src/main/assets/: UserMapper.xml  app.db  auth.properties  config.properties  db.properties  dingdang.txt  entity.xml  metadata.xml  mybatis-config.xml  readme.txt  role.xml  user.xml
app/src/main/jni/: Android.mk  Application.mk  basictype.h  com_example_aaaa_test.h  com_noahedu_person_health_engine_Engine.cpp  com_noahedu_person_health_engine_Engine.h  com_noahedu_recorderlib_recorder_mp3_Mp3Encoder.h  common.c  common.h  huffman.c  huffman.h  list.c  list.h  log.h  main.c  nativetest.cpp  swt_handler.cpp  swt_handler.h  sync_writer.cpp  sync_writer.h  util.cpp  util.h  videodecryptkey.h
base_lib_common/: build.gradle
base_lib_countly/: proguard-rules.pro
base_lib_opencv/: CMakeLists.txt  build.gradle
base_lib_opencv/src/main/: AndroidManifest.xml
base_lib_opencv/src/main/cpp/: CMakeLists.txt  opencv.cpp  opencv_utils.cpp  opencv_utils.h
base_lib_opencv/src/main/java/com/libopencv/util/: OpencvUtils.java
base_lib_yuv/: CMakeLists.txt  build.gradle
base_lib_yuv/src/main/cpp/: YuvJni.cpp  aa.txt  libyuv_utils.cpp  libyuv_utils.h
gradle/wrapper/: gradle-wrapper.properties
mybatis/: AndroidManifest.xml  build.gradle  gradle.properties
video-support/: bintray.gradle  build.gradle
(+1047 files in other folders)
